--- a/alipay_chongzhi/source/alipay.csproj
+++ b/alipay_chongzhi/source/alipay.csproj
@@ -26,6 +26,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="FiddlerCore">
       <HintPath>.\FiddlerCore.dll</HintPath>
