--- a/alipay_chongzhi/source/alipay.csproj
+++ b/alipay_chongzhi/source/alipay.csproj
@@ -40,8 +40,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="-Module-{887C6642-6FD8-4ACD-98EF-312D57F78CAE}.cs" />
-    <Compile Include="-PrivateImplementationDetails-{97325D48-EB47-4BF5-8EA1-73F75D65601D}.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="alipay_chongzhi.Properties\Resources.cs" />
     <Compile Include="alipay_chongzhi.Properties\Settings.cs" />
     <Compile Include="alipay_chongzhi\HardwareInfo.cs" />
@@ -67,7 +66,6 @@
     <Compile Include="Class3.cs" />
     <Compile Include="Class4.cs" />
     <Compile Include="Class7.cs" />
-    <Compile Include="Class8.cs" />
     <Compile Include="Class9.cs" />
     <Compile Include="Delegate0.cs" />
     <Compile Include="Delegate1.cs" />
@@ -113,6 +111,9 @@
     <Content Include="CertMaker.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="tem_recent.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="update log.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
